<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".signupActivity">


    <Button
        android:id="@+id/signupBtn"
        android:layout_width="350dp"
        android:layout_height="41dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/btn_effect_ripple"
        android:onClick="signUp"
        android:text="@string/SignUpBtn"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="18sp" />

    <EditText
        android:id="@+id/idEditText"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/input"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/n_id"
        android:inputType="number|text"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="1dp"
        android:paddingRight="1dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupEmailEditText"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/signupEmailEditText"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:autofillHints=""
        android:background="@drawable/input"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="1dp"
        android:paddingRight="1dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />


    <EditText
        android:id="@+id/confirmPassEditText"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="1dp"
        android:paddingRight="1dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupPassEditText"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/fingerIDEditText"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/fingerID"
        android:inputType="number|text"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="1dp"
        android:paddingRight="1dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassEditText"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/signupPassEditText"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:autofillHints=""
        android:background="@drawable/input"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="1dp"
        android:paddingRight="1dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usrenameEditText"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/usrenameEditText"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:autofillHints=""
        android:background="@drawable/input"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="1dp"
        android:paddingRight="1dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEditText"
        tools:targetApi="o" />


    <ImageView
        android:id="@+id/signUpPhoto"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:src="@drawable/no_photo"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/regProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:onClick="goToLogin"
        android:text="@string/loginTextView"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>