<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".GetLocation">

    <Button
        android:id="@+id/loctionBtn"
        android:layout_width="223dp"
        android:layout_height="55dp"
        android:layout_marginTop="450dp"
        android:layout_marginBottom="99dp"
        android:background="@drawable/btn_effect_ripple"
        android:onClick="continueToNext"
        android:text="@string/continueLocation"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:fontFamily="@font/font_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="18sp" />


    <ImageView
        android:id="@+id/locationImageView"
        android:layout_width="353dp"
        android:layout_height="247dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="333dp"
        android:onClick="openGoogleMaps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/open_location_shape" />

    <ProgressBar
        android:id="@+id/progressLocation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LocationtextView"
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="599dp"
        android:gravity="center_horizontal"
        android:text="@string/locationMessage"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:fontFamily="@font/font_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/openTextView"
        android:layout_width="298dp"
        android:layout_height="26dp"
        android:gravity="center_horizontal"
        android:onClick="openGoogleMaps"
        android:text="@string/openLocation"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="@font/font_1"
        app:layout_constraintBottom_toTopOf="@+id/locationImageView"
        app:layout_constraintEnd_toStartOf="@+id/locationImageView"
        app:layout_constraintStart_toEndOf="@+id/locationImageView"
        app:layout_constraintTop_toBottomOf="@+id/locationImageView"
        app:layout_constraintVertical_bias="0.117" />

</androidx.constraintlayout.widget.ConstraintLayout>